Correct Spacing and Add Black line

--- a/style.css
+++ b/style.css
@@ -490,10 +490,13 @@ ul {
 .contact-form {
   width: 375px;
   height: 779px;
-  background: url(images/form-background.svg);
+  background: url(images/form-background.svg) no-repeat;
+  background-size: 375px 779px;
   display: flex;
   flex-direction: column;
   padding-left: 24px;
+  box-sizing: border-box;
+  margin-top: 114px;
 }
 
 .contact-form h2 {
@@ -518,7 +521,9 @@ ul {
   color: #ebebff;
   text-align: center;
   width: 327px;
+  height: 140px;
   margin-top: 0;
+  margin-bottom: 50px;
 }
 
 .contact-form input {
@@ -534,6 +539,8 @@ ul {
   border: 1px solid #cfd8dc;
   border-radius: 8px;
   margin-bottom: 18px;
+  padding: 15px 38px 15px 16px;
+  box-sizing: border-box;
 }
 
 .contact-form textarea {
@@ -548,6 +555,8 @@ ul {
   border: 1px solid #cfd8dc;
   border-radius: 8px;
   margin-bottom: 22px;
+  padding: 15px 38px 15px 16px;
+  box-sizing: border-box;
 }
 
 .contact-form button {
@@ -574,4 +583,13 @@ ul {
 .contact-form button:active {
   background-color: lightgrey;
   border-color: grey;
+}
+
+.line {
+  height: 5px;
+  width: 134px;
+  border-radius: 5px;
+  background-color: black;
+  margin-top: 32px;
+  margin-left: 96px;
 }
